syntax="proto3";

option java_package = "com.dataform.protos";
option java_outer_classname = "ProfilesMeta";
option java_multiple_files = true;

message Profile {
  int32 threads = 7;
 
  oneof connection {
    JDBC redshift = 3;
    JDBC postgres = 8;
    BigQuery bigquery = 4;
    Snowflake snowflake = 5;
  }
  
  reserved 1, 2;
}

message JDBC {
  string host = 2;
  int32 port = 7;
  string user = 4;
  string password = 5;
  string database = 6;

  // Deprecated, DO NOT USE.
  // Kept for backwards compatibility; will be removed upon a later release.
  int64 deprecated_port = 3;

  reserved 1;
}

message Snowflake {
  string account_id = 2;
  string user_name = 3;
  string password = 4;
  string role = 5;
  string database_name = 6;
  string warehouse = 7;

  reserved 1;
}

message BigQuery {
  string project_id = 1;
  string credentials = 3;
  string location = 4; // EU or US (default)

  reserved 2;
}
